diferenciació entre serializer de issues i de issuesIndex, correccions a la api
