# app/controllers/issues_controller.rb
@@ -41,7 +41,7 @@ class IssuesController < ApplicationController
 
     respond_to do |format|
       format.html
-      format.json {render json: @issues, status: :ok, each_serializer: IssueSerializer}
+      format.json {render json: @issues, status: :ok, each_serializer: IssueIndexSerializer}
     end
   end
 
@@ -50,7 +50,7 @@ class IssuesController < ApplicationController
   def show
     respond_to do |format|
       format.html
-      format.json {render json: @issues, status: :ok, serializer: IssueSerializer}
+      format.json {render json: @issue, status: :ok, serializer: IssueSerializer}
     end
   end
 
