# app/serializers/IssueIndexSerializer.rb
@@ -1,0 +1,12 @@
+class IssueIndexSerializer < ActiveModel::Serializer
+    attributes :id, :Title, :Description, :Type, :Priority, :Status, :assignee_id, :Votes, :Watchers, :created_at, :updated_at, :_links
+    
+    def _links
+        links = {
+            self: { href: "/issues/#{object.id}" },
+            creator: { href: "/users/#{object.user_id}" },
+            assignee: { href: "/users/#{object.assignee_id}" },
+        }
+    end
+    
+end
